samples/_failures_safe/1761144322_0b4337_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7706580c.c: In function ‘main’:
./samples/SAFE/__tmp_7706580c.c:151:9: error: expected expression at end of input
  151 |         printf("%s %s %s\n", entries[i].timestamp,
      |         ^~~~~~
./samples/SAFE/__tmp_7706580c.c:151:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7706580c.c:151:9: error: expected declaration or statement at end of input
